2004-06-15  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_realtime_sysentry): Properly return
	-ENOSYS upon syscall request without any skin loaded.

	* nucleus/pod.c (xnpod_schedule_runnable): Postpone
	xnsched_clr_resched() so that calls with XNPOD_NOSWITCH set don't
	clear it.

	* nucleus/pod.c (xnpod_schedule): Make sure we don't lose the
	rescheduling bit upon early exit.
	
	* nucleus/thread.c (xnthread_init): Add built-in support for
	periodic timing.

2004-06-13  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-load.in: Use modprobe instead of insmod for modules
	from /lib/modules.

2004-06-11  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Export event group interface.

	* skins/rtai/event.c: Add documentation.

2004-06-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/event.c: Fully implement the event flag group.

	* nucleus/pod.c (xnpod_init_thread): Discard magic parameter. Use
	xnthread_set_magic() after creation instead.

	* nucleus/thread.c (xnthread_init): Discard magic parameter as a
	consequence of the above change.

	* configure.in: Pass ARCH in RTAI_KBUILD_CMD.

2004-06-09  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (xnarch_switch_to): Integrate
	the memory context switch code inline.

	* arch/i386/hal/hal.c: Discard rthal_linux_switch_mm().

2004-06-07  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-load.in: Add application loader adapted from
	vesuvio.

	* testsuite: Add testsuite embryo. First, a plain and simple
	latency test.

2004-06-06  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/system.h: Remove useless inclusions for plain
	user-space mode.

2004-06-06  Philippe Gerum  <rpm@xenomai.org>

	* Move to GNA (http://www.gna.org/projects/rtai/).

2004-06-06  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/system.h: New wrapper file for user-space
	inclusion. Wraps to the nucleus/asm-uvm/ pseudo-architecture when
	compiling the user-space VMs.
